--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>test</title>
+    <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/index/0general.css">
@@ -22,6 +22,48 @@
     <link rel="stylesheet" href="css/michael_card.css">
     <link rel="stylesheet" href="css/signup.css">
     <link rel="stylesheet" href="css/teachers.css">
+
+
+    <style>
+                  .underline_fixed_index{ 
+                  display: block;
+                  position: relative;
+                  padding: 0.2em 0;
+                  }
+
+
+                  .underline_fixed_index::after{
+                  content: '';
+                  position: absolute;
+                  bottom: 0;
+                  left: 20%;
+                  width: 60%;
+                  height: 0.2em;
+                  background-color: #e37886;
+                  }
+
+                  .underline_fixed_index_menu {
+                  display: block;
+                  position: relative;
+                  padding: 0.2em 0;
+                  }
+
+
+                  .underline_fixed_index_menu::after{
+                  content: '';
+                  position: absolute;
+                  bottom: 0;
+                  left: 70%;
+                  width: 30%;
+                  height: 0.2em;
+                  background-color: #e37886;
+                  }
+                  .underline_fixed_index::after,
+                  .underline_fixed_index_menu::after {
+                  opacity: 1;
+                  transform: translate3d(0, 0.2em, 0);
+                  }
+    </style>
 
     </head>
 
@@ -49,7 +91,7 @@
                     <a class="navbar_links nav-link" href="teachers.html">ماموستا</a>
                 </div>
                 <div class="navbar_underline col p-0">
-                    <a class="navbar_links nav-link" href="index.html">دەستپێك</a>
+                    <a class="underline_fixed_index nav-link" href="index.html">دەستپێك</a>
                 </div>
                 <div class="col p-0">
                   <button class="navb_btn_1 btn " type="submit"> <a class="nav-link" href="signup.html"> خۆ توومارکرن</a></button>
@@ -93,7 +135,7 @@
                             
                           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="index.html">دەستپێك</a>
+                              <a class="nav-link underline_fixed_index_menu active" aria-current="page" href="index.html">دەستپێك</a>
                               <hr>
                             </li>
                             <li class="nav-item">
