--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   <img src="images/ipad.png" class="card-img  d-md-block d-lg-none" alt="">
   <div class="below_navbar_text p-5 card-img-overlay container-fluid ">
     <div class="row justify-content-center  justify-content-lg-end">
-        <div class="col-10 col-sm-10 col-md-10  col-lg-8 col-xl-8  col-xxl-8 text-center text-lg-end">
+        <div class="col-12 col-sm-12 col-md-12  col-lg-8 col-xl-8  col-xxl-8 text-center text-lg-end">
             <h1>
                 <div class="Tittle_showcase">
                   <span dir="auto">خولێن زمانێ ئینگلیزی یێن     <span class="text-warning"> پەیڤین   (Zoom)</span></span>
@@ -287,7 +287,7 @@
     <div class="font_size row col-sm-10 col-lg-12  justify-content-center g-2">
       
     <div class="boxes_background_body card" >
-      <div class="row  g-0 align-items-center">
+      <div class="row whole_div g-0 align-items-center">
        
   
         <div class="col">
