--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
+    <link rel="icon" href="images/4.png">
+
     <link rel="stylesheet" href="css/index/0general.css">
     <link rel="stylesheet" href="css/index/1navbar.css">
     <link rel="stylesheet" href="css/index/3below_background_boxes.css">
@@ -63,6 +65,7 @@
                   opacity: 1;
                   transform: translate3d(0, 0.2em, 0);
                   }
+
     </style>
 
     </head>
@@ -93,12 +96,12 @@
                 <div class="navbar_underline col p-0">
                     <a class="underline_fixed_index nav-link" href="index.html">دەستپێك</a>
                 </div>
-                <div class="col p-0">
+                <!-- <div class="col p-0">
                   <button class="navb_btn_1 btn " type="submit"> <a class="nav-link" href="signup.html"> خۆ توومارکرن</a></button>
                 </div>
                 <div class="col p-0">
                     <button class="navb_btn_2 btn " type="submit"> <a class="nav-link" href="login.html">چوونا ژوور </a></button>
-                </div>
+                </div> -->
             </div>
 
             <div class="row text-end  d-lg-none">
@@ -158,12 +161,12 @@
 
                      
                           </ul>
-                          <form class="d-flex ms-4 me-4 justify-content-end mt-3" role="search">
+                          <!-- <form class="d-flex ms-4 me-4 justify-content-end mt-3" role="search">
                           <div class="row gy-1">
                             <button class="btn navb_btn_2" type="submit"> <a class="nav-link" href="login.html">چوونا ژوور</a> </button>
                             <button class="btn navb_btn_1" type="submit"> <a class="nav-link" href=" signup.html">خۆ توومارکرن </a></button>
                         </div>
-                          </form>
+                          </form> -->
                         </div>
                       </div>
                     </div>
@@ -188,7 +191,7 @@
             <p dir="auto" class="background_text">
                 فێری زمانێ ئینگلیزی ببە ب ساناهیترین شێوە و بزانە کیش رێك و شێواز بو تە باشە و دگەل تە دگونجت دگەل مەدا. ماموستایێن تایبەت مە یێن هەین دشێن بو ماوەیەکێ درێژ دگەل تە بن و هاریکار بن و بەرێخودانێ ل ئاریشا تە بکن و چارەکن!  و هەروەسا تو دشێی د خولێن مە یێن (VIP) دا بەشدار بی هەرگاڤا تە بڤێت.    
             </p>
-            <a onclick="scrollToTop()"  href="#top" class="showcase_btn btn">پتر بزانە</a>
+            <a onclick="scrollToTop()"  href="#middle" class="showcase_btn btn">پتر بزانە</a>
         </div>
         
     </div>
@@ -258,7 +261,7 @@
 <!-- below_boxes_paragraph -->
 
 <div  class=" container paragraph_below_boxes text-end" >
-  <h1 id="top">
+  <h1 id="middle">
     My onclick scroll
   </h1>
   <br>
