--- a/jagar.html
+++ b/jagar.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mr. Jagar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="icon" href="images/4.png">
+
     <link rel="stylesheet" href="css/index/0general.css">
     <link rel="stylesheet" href="css/index/1navbar.css">
     <link rel="stylesheet" href="css/index/3below_background_boxes.css">
@@ -89,12 +91,12 @@
           <div class="navbar_underline col p-0">
               <a class="navbar_links nav-link" href="index.html">دەستپێك</a>
           </div>
-          <div class="col p-0">
+          <!-- <div class="col p-0">
             <button class="navb_btn_1 btn " type="submit"> <a class="nav-link" href="signup.html"> خۆ توومارکرن</a></button>
           </div>
           <div class="col p-0">
               <button class="navb_btn_2 btn " type="submit"> <a class="nav-link" href="login.html">چوونا ژوور </a></button>
-          </div>
+          </div> -->
       </div>
 
       <div class="row text-end  d-lg-none">
@@ -154,12 +156,12 @@
 
                
                     </ul>
-                    <form class="d-flex ms-4 me-4 justify-content-end mt-3" role="search">
+                    <!-- <form class="d-flex ms-4 me-4 justify-content-end mt-3" role="search">
                     <div class="row gy-1">
                       <button class="btn navb_btn_2" type="submit"> <a class="nav-link" href="login.html">چوونا ژوور</a> </button>
                       <button class="btn navb_btn_1" type="submit"> <a class="nav-link" href=" signup.html">خۆ توومارکرن </a></button>
                   </div>
-                    </form>
+                    </form> -->
                   </div>
                 </div>
               </div>
