--- a/teachers.html
+++ b/teachers.html
@@ -195,7 +195,9 @@
 <!-- return_button -->
 <div class="container">
     <div class="div_ row">
-    <button class="return_button"> <a class="nav-link" href="index.html">&#8592; </a></button>
+     <a class="nav-link" href="index.html">
+      <button class="return_button"> &#8592; </button>
+    </a>
 
     </div>
 </div>
