--- a/teachers.html
+++ b/teachers.html
@@ -195,10 +195,9 @@
 <!-- return_button -->
 <div class="container">
     <div class="div_ row">
-     <a class="nav-link" href="index.html">
-      <button class="return_button"> &#8592; </button>
-    </a>
-
+    <button class="return_button"> <a class="nav-link" href="index.html">
+      &#8592; 
+    </a></button>
     </div>
 </div>
 <!-- teacher cards -->
