--- a/Not running in the browser/login.html
+++ b/Not running in the browser/login.html
@@ -41,12 +41,24 @@
           <div class="navbar_underline col p-0">
               <a class="navbar_links nav-link" onclick="scrollToBottom()"  href="#bottom" >پەیوەندی</a>
             </div>
-            <div class="navbar_underline col p-0">
+            <!-- <div class="navbar_underline col p-0">
                 <a class="navbar_links nav-link" href="registration.html">بەشداربوون </a>
+            </div> -->
+
+
+            <div class="navbar_underline dropdown col p-0 text-center ">
+              <button class="btn dropdown-toggle  text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                خولێن بەردەست
+              </button>                  
+
+              <div class="dropdown-menu text-end">
+                <li><a class="dropdown-item" href="#">خولێن گروپان</a></li>
+                <li><a dir="rtl" class="dropdown-item" href="#">خولێن تایبەت VIP</a></li>
+              </div>
             </div>
-          <div class="navbar_underline col p-0">
-              <a class="navbar_links nav-link" href="courses.html">خولێن بەردەست</a>
-          </div>
+
+
+          
           <div class="navbar_underline col p-0">
               <a class="navbar_links nav-link" href="teachers.html">ماموستا</a>
           </div>
