--- a/index.html
+++ b/index.html
@@ -24,48 +24,17 @@
     <link rel="stylesheet" href="css/michael_card.css">
     <link rel="stylesheet" href="css/signup.css">
     <link rel="stylesheet" href="css/teachers.css">
+    <link rel="stylesheet" href="css/dropdown.css">
 
 
     <style>
-                  .underline_fixed_index{ 
-                  display: block;
-                  position: relative;
-                  padding: 0.2em 0;
-                  }
-
-
-                  .underline_fixed_index::after{
-                  content: '';
-                  position: absolute;
-                  bottom: 0;
-                  left: 20%;
-                  width: 60%;
-                  height: 0.2em;
+                  .underline_fixed_index { 
                   background-color: #e37886;
-                  }
-
-                  .underline_fixed_index_menu {
-                  display: block;
-                  position: relative;
-                  padding: 0.2em 0;
-                  }
-
-
-                  .underline_fixed_index_menu::after{
-                  content: '';
-                  position: absolute;
-                  bottom: 0;
-                  left: 70%;
-                  width: 30%;
-                  height: 0.2em;
-                  background-color: #e37886;
-                  }
-                  .underline_fixed_index::after,
-                  .underline_fixed_index_menu::after {
-                  opacity: 1;
-                  transform: translate3d(0, 0.2em, 0);
-                  }
-
+                  border-radius: 2px 0px 0px 20px;
+                  padding: 4px;
+                  width: 100%;
+                  margin: auto;
+                }
     </style>
 
     </head>
@@ -84,18 +53,39 @@
                 <div class="navbar_underline col p-0">
                     <a class="navbar_links nav-link" onclick="scrollToBottom()"  href="#bottom" >پەیوەندی</a>
                   </div>
+
+
+<!-- 
                   <div class="navbar_underline col p-0">
                       <a class="navbar_links nav-link" href="registration.html">بەشداربوون </a>
+                  </div> -->
+
+
+                  <div class="navbar_underline dropdown col p-0 text-center text-center">
+                    <button class="btn dropdown-toggle  text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      خولێن بەردەست
+                    </button>                  
+  
+                    <div class=" dropdown-menu dropdown_menu text-end">
+                      <li><a class="dropdown-item" href="groups.html">خولێن گروپان</a></li>
+                      <li><a dir="rtl" class="dropdown-item" href="vips.html">خولێن تایبەت VIP</a></li>
+                    </div>
                   </div>
-                <div class="navbar_underline col p-0">
-                    <a class="navbar_links nav-link" href="courses.html">خولێن بەردەست</a>
-                </div>
+
+
+
                 <div class="navbar_underline col p-0">
                     <a class="navbar_links nav-link" href="teachers.html">ماموستا</a>
                 </div>
-                <div class="navbar_underline col p-0">
-                    <a class="underline_fixed_index nav-link" href="index.html">دەستپێك</a>
+
+
+                <div class="navbar_underline col p-0 ">
+                    <a class="underline_fixed_index  nav-link" href="index.html">دەستپێك</a>
                 </div>
+
+
+
+
                 <!-- <div class="col p-0">
                   <button class="navb_btn_1 btn " type="submit"> <a class="nav-link" href="signup.html"> خۆ توومارکرن</a></button>
                 </div>
@@ -103,14 +93,7 @@
                     <button class="navb_btn_2 btn " type="submit"> <a class="nav-link" href="login.html">چوونا ژوور </a></button>
                 </div> -->
             </div>
-
             <div class="row text-end  d-lg-none">
-                
-
-
-
-
-
                 <nav class="navbar navbar-dark fixed-top">
                     <div class="container-fluid">
 
