--- a/ahmed.html
+++ b/ahmed.html
@@ -156,14 +156,28 @@
                         <a class="nav-link underline_fixed_teachers_menu active" aria-current="page" href="teachers.html">ماموستا</a>
                         <hr>
                       </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="courses.html">خولێن بەردەست</a>
-                        <hr>
-                      </li>
-                      <div class="nav-item">
-                        <a class="nav-link active" href="registration.html">بەشداربوون </a>
-                        <hr>
-                    </div>
+
+
+                                      
+                      <div class="navbar_underline dropdown col p-0 text-end">
+                        <button class="btn dropdown-toggle  text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          خولێن بەردەست
+                        </button>                  
+
+                        <div class=" dropdown-menu dropdown_menu_mobile text-end">
+                          <li><a class="dropdown-item" href="groups.html">خولێن گروپان</a></li>
+                          <li><a dir="rtl" class="dropdown-item" href="vips.html">خولێن تایبەت VIP</a></li>
+                        </div>
+                      </div>
+                      <hr>
+
+
+
+
+
+
+
+
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" onclick="scrollToBottom()"  href="#bottom" >پەیوەندی کرن</a>
                         <hr>
