--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
                   width: 100%;
                   margin: auto;
                 }
+
+                .underline_fixed_index_mobile  {
+                  background-color: #e37886;
+                  border-radius: 2px 0px 0px 20px;
+                }
     </style>
 
     </head>
@@ -121,21 +126,29 @@
                             
                           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                              <a class="nav-link underline_fixed_index_menu active" aria-current="page" href="index.html">دەستپێك</a>
+                              <a class="nav-link underline_fixed_index active" aria-current="page" href="index.html">دەستپێك</a>
                               <hr>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link active" aria-current="page" href="teachers.html">ماموستا</a>
                               <hr>
                             </li>
-                            <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="courses.html">خولێن بەردەست</a>
+
+
+                                      
+                            <div class="navbar_underline dropdown col p-0 text-end">
+                                <button class="btn dropdown-toggle  text-light" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                  خولێن بەردەست
+                                </button>                  
+
+                                <div class=" dropdown-menu dropdown_menu_mobile text-end">
+                                  <li><a class="dropdown-item" href="groups.html">خولێن گروپان</a></li>
+                                  <li><a dir="rtl" class="dropdown-item" href="vips.html">خولێن تایبەت VIP</a></li>
+                                </div>
+                              </div>
                               <hr>
-                            </li>
-                            <div class="nav-item">
-                              <a class="nav-link active" href="registration.html">بەشداربوون </a>
-                              <hr>
-                          </div>
+
+
                             <li class="nav-item">
                               <a class="nav-link active" aria-current="page" onclick="scrollToBottom()"  href="#bottom" >پەیوەندی کرن</a>
                               <hr>
@@ -335,7 +348,6 @@
   
     </div>
   </div>
-
 
 
 
