--- a/groups.html
+++ b/groups.html
@@ -68,6 +68,15 @@
                   transform: translate3d(0, 0.2em, 0);
                   }
 
+                  .registration_button{
+                    background-color: #e37886;
+                    width: fit-content;
+                    margin: auto;
+                    border-radius: 40px;
+                    padding: 4px;
+                    font-size: 15px;
+                  }
+
 
 
     </style>
@@ -244,8 +253,10 @@
       <div class="boxes">
         <h1 class="tittle_text">فێری زمانێ ئینگلیزی ببە <span class="text-warning">ب رێکا ئاخفتنێ</span></h1>
         <p dir="rtl" class="paragraph">د ڤێ جورێ خولێ دا ماموستا دێ پتر پاشتراستیێ ل هندێ کت کو فێرخواز باخڤت هەر ژ رۆژا دەستپێکێ و ئەگەر خو چەند پەیڤ و رستێن کێم هەبن و ل دووماهییا خولێ دێ ئاستێ وی یێ رەهوانیێ گەلەک باشتر لێئێت!</p>
-      </div>
+        <img src="https://online.fliphtml5.com/huzzz/wwtd/files/large/1.jpg" alt="" style="width:30%; margin: auto;">
+        <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
   </div>
+</div>
 </div>
 <!-- number 2 -->
 <div class="all_offers container  text-center">
@@ -255,9 +266,12 @@
     <div class="boxes">
       <h1 class="tittle_text">فێری زمانێ ئینگلیزی  ببە <span class="text-warning">ب شێوەیەکێ گشتی </span></h1>
       <p dir="rtl" class="paragraph">دڤێ خولێدا ماموستا دێ پشتراستیێ ل فێرخوازی کەت ب شێوەیەکێ گشتی زمانی بزانت بێ کو پتڤی کەسەکی ببت لدەمێ گەشتکرنێ و گەلەک بوارێن دیدا!</p>
+      <img src="https://m.media-amazon.com/images/W/MEDIAX_792452-T2/images/I/81yzzlxHYML._AC_UF1000,1000_QL80_.jpg" alt="" style="width:30%; margin: auto;">
+      <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
+    </div>
     </div>
   </div>
-</div>
+
 
 
 
