--- a/registration.html
+++ b/registration.html
@@ -87,9 +87,6 @@
                 <a class="underline_fixed_registration nav-link" href="registration.html">بەشداربوون </a>
             </div>
           <div class="navbar_underline col p-0">
-              <a class="navbar_links nav-link" href="courses.html">خولێن بەردەست</a>
-          </div>
-          <div class="navbar_underline col p-0">
               <a class="navbar_links nav-link" href="teachers.html">ماموستا</a>
           </div>
           <div class="navbar_underline col p-0">
@@ -142,10 +139,6 @@
                       </li>
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="teachers.html">ماموستا</a>
-                        <hr>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="courses.html">خولێن بەردەست</a>
                         <hr>
                       </li>
                       <div class="nav-item">
@@ -215,25 +208,14 @@
 
 <div class=" container mt-5">
   <div class="row text-center m-1">
-    <h1 dir="rtl" class="note_ bg-success p-2 rounded-5 user-select-none">ئەو خولێن سەرەکی ئەڤە نە، تو دشێ ناڤێ خۆ تووماربکی د ئێک ژڤان فورما دا !</h1>
+    <h1 dir="rtl" class="note_ bg-success p-2 rounded-5 user-select-none">تو دشێ خو تومارکی برێکا ڤێ فورما ل خوارێ</h1>
   </div>
 </div>
 
 
 <div class="div_group_form container">
   <div class="row text-center">
-    <h1 class="form_tittle user-select-none">خولێن گروپان</h1>
-   <button class="btn_forms">
-    <a class="link_tittle nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSe7OLrobcUDM7E-Vky4u_nrRQ_JVDBoYq9t1Jxh1Y0LdtKFow/viewform" download>خۆ توومارکرن</a>
-   </button>
-  </div>
-</div>
-
-
-
-<div class="div_group_form container">
-  <div class="row text-center">
-    <h1 dir="rtl" class="form_tittle user-select-none">خولێن تایبەت (VIP)</h1>
+    <h1 class="form_tittle user-select-none"></h1>
    <button class="btn_forms">
     <a class="link_tittle nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSe7OLrobcUDM7E-Vky4u_nrRQ_JVDBoYq9t1Jxh1Y0LdtKFow/viewform" download>خۆ توومارکرن</a>
    </button>
