--- a/vips.html
+++ b/vips.html
@@ -68,6 +68,17 @@
                   transform: translate3d(0, 0.2em, 0);
                   }
 
+                  
+                  .registration_button{
+                    background-color: #e37886;
+                    width: fit-content;
+                    margin: auto;
+                    border-radius: 40px;
+                    padding: 4px;
+                    font-size: 15px;
+                  }
+
+
 
 
     </style>
@@ -239,6 +250,8 @@
       <div class="boxes">
         <h1 class="tittle_text">فێری زمانێ ئینگلیزی ببە <span class="text-warning">بێ رێزمان</span></h1>
         <p dir="rtl" class="paragraph">د ڤێ جورێ خولێ دا ماموستا دێ پتر پاشتراستیێ ل هندێ کت کو فێرخواز باخڤت و ب هویربینی رێزمانێ شلوڤەناکت!</p>
+        <img src="https://online.fliphtml5.com/huzzz/wwtd/files/large/1.jpg" alt="" style="width:30%; margin: auto;">
+        <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
       </div>
   </div>
 </div>
@@ -250,6 +263,8 @@
     <div class="boxes">
       <h1 class="tittle_text">فێری زمانێ ئینگلیزی ب رێکا <span class="text-warning">ب کارئینانا رێزمانێ</span></h1>
       <p dir="rtl" class="paragraph">دڤێ خولێدا ماموستا دێ پشتراستیێ ل فێرخوازی کت کو فێری زمانێ ببت و دگەل دا رێزمانێ ژی ب هویربینی بزانت!</p>
+      <img src="https://online.fliphtml5.com/huzzz/wwtd/files/large/1.jpg" alt="" style="width:30%; margin: auto;">
+      <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
     </div>
   </div>
 </div>
@@ -261,6 +276,8 @@
     <div class="boxes">
       <h1 class="tittle_text">فێربوون <span class="text-warning">برێکا پەیڤان و وێنان</span></h1>
       <p dir="rtl" class="paragraph">د ڤێ جورێ خولێدا دێ ماموستاپتر پاشتراستیێ ل پەیڤان کەت و پشتی فێرخواز ڤێ خولێ ب دووماهی بینت دێ گەنجینەکا مەزن هەبت ژ پەیڤان!</p>
+      <img src="https://online.fliphtml5.com/huzzz/wwtd/files/large/1.jpg" alt="" style="width:30%; margin: auto;">
+      <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
     </div>
   </div>
 </div>
@@ -272,6 +289,8 @@
     <div class="boxes">
       <h1 class="tittle_text">فێربوونا <span class="text-warning">شارەزاییان جودا جودا</span></h1>
       <p dir="rtl" class="paragraph">د ڤێ جورێ خولێدا دێ ماموستاپتر پاشتراستیێ ل ئێك شارەزایێ بتنێ کت، ئانکو قوتابیێ دێ ئێك شارەزایێ هەلبژێرت و ماموستا دێ بتنێ وێ شارەزایێ پێشئێخت، مە چار شارەزایێن زمانێ ئینگلیزی هەنە، خاندن، ئاخفتن، نڤێسین، و گوهدان!</p>
+      <img src="https://online.fliphtml5.com/huzzz/wwtd/files/large/1.jpg" alt="" style="width:30%; margin: auto;">
+      <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
     </div>
   </div>
 </div>
@@ -294,6 +313,8 @@
     <div class="boxes">
       <h1 dir="rtl" class="tittle_text"><span class="text-warning">خولا ڤەکری تایبەت</span></h1>
       <p dir="rtl" class="paragraph">د ڤێ جورێ  خولێدا ماموستا دێ ل دیف حەزا تە و ب بوارێ تەڤە گرێدای دێ تە فێرکەت و پەیڤ و رستان بوتە دابینکەت!</p>
+      <img src="https://online.fliphtml5.com/huzzz/wwtd/files/large/1.jpg" alt="" style="width:30%; margin: auto;">
+      <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
     </div>
   </div>
 </div>
