--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="css/signup.css">
     <link rel="stylesheet" href="css/teachers.css">
     <link rel="stylesheet" href="css/dropdown.css">
+    <link rel="stylesheet" href="css/cdc_images.css">
 
 
     <style>
@@ -260,8 +261,20 @@
 
   </div>
 </div>
-<!-- below_boxes_paragraph -->
 
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- below_boxes_paragraph -->
 <div  class=" container paragraph_below_boxes text-end" >
   <h1 id="middle">
     My onclick scroll
@@ -386,6 +399,56 @@
 
 </div>
 </div>
+
+
+
+
+
+
+
+<!-- background_body_boxes_and_btn_images -->
+<div class="the_whole_div container text-center">
+  <div class="row">
+
+    <div>
+      <div><img class="all_images" src="images/1image.jpg" alt=""></div>
+    </div>
+
+              <div class="d-flex justify-content-center">
+
+                      <div class="three_images">
+                        <div><img class="img all_images" src="images/2image.jpg" alt=""></div>
+                      </div>
+
+                      <div class="three_images">
+                        <div><img class="img all_images" src="images/3image.jpg" alt=""></div>
+                      </div>
+
+                      <div class="three_images">
+                        <div><img class="img all_images" src="images/4image.jpg" alt=""></div>
+                      </div>
+
+              </div>
+
+    <div class="text-center rounded-4">
+      <h1 dir="rtl">ئێکەم بەشدار بوون دگەل CDC</h1>
+    </div>
+
+
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- below_body_background_boxes -->
 <div class="text-center container">
   <h1 class="below_body_title">
