--- a/index.html
+++ b/index.html
@@ -407,36 +407,222 @@
 
 
 <!-- background_body_boxes_and_btn_images -->
-<div class="the_whole_div container text-center">
-  <div class="row">
 
-    <div>
-      <div><img class="all_images" src="images/1image.jpg" alt=""></div>
+
+
+
+<br>
+ <div id="carouselExampleCaptions" class="carousel_slide carousel slide" data-bs-ride="false">
+  <h1 class="tittle_image text-center">CDC (Career Development Center)</h1>
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/1image.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption">
+        <h5 class="header_image" dir="rtl">ئێکەم بەشدار بوون دگەل CDC بوو</h5>
+        <p class="paragraph_image" dir="rtl">بو ماوێ دوو هەیڤان سەرپەرشتیا خولێن مە دکرن!</p>
+      </div>
     </div>
-
-              <div class="d-flex justify-content-center">
-
-                      <div class="three_images">
-                        <div><img class="img all_images" src="images/2image.jpg" alt=""></div>
-                      </div>
-
-                      <div class="three_images">
-                        <div><img class="img all_images" src="images/3image.jpg" alt=""></div>
-                      </div>
-
-                      <div class="three_images">
-                        <div><img class="img all_images" src="images/4image.jpg" alt=""></div>
-                      </div>
-
-              </div>
-
-    <div class="text-center rounded-4">
-      <h1 dir="rtl">ئێکەم بەشدار بوون دگەل CDC</h1>
+    <div class="carousel-item active">
+      <img src="images/2image.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption">
+        <h5 class="header_image" dir="rtl">رێژەکا زوور یا فێرخوازان</h5>
+        <p class="paragraph_image" dir="rtl">پتر ژ ٢٠٠٠ هزار قوتابیان ناڤێن خو تومارکربین!</p>
+      </div>
     </div>
-
+    <div class="carousel-item active">
+      <img src="images/3image.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption">
+        <h5 class="header_image" dir="rtl">ئەنجام</h5>
+        <p class="paragraph_image" dir="rtl">ل دووماهیێ فێرخواز بونە خودان باوەرناما بوەرپێکری ژلا یێ سەنتەرێ CDC ڤە!</p>
+      </div>
+    </div>
+    <div class="carousel-item active">
+      <img src="images/4image.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption">
+        <h5 class="header_image" dir="rtl">هەڵسەنگادن</h5>
+        <p class="paragraph_image" dir="rtl">دەست خوشی ل مە هاتە کرن ژلایێ CDC ڤە و هەروەسا ژلایێ قوتابییان ڤە!</p>
+      </div>
+    </div>
 
   </div>
-</div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div> 
+
+
+
+
+
+
+
+
+
+
+
+<br>
+
+
+
+<div id="carouselExampleCaption" class="carousel_slide carousel slide" data-bs-ride="false">
+  <h1 class="tittle_image text-center">قوتابیێن مە ل زانکوییا زاخو</h1>
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaption" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaption" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaption" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleCaption" data-bs-slide-to="3" aria-label="Slide 4"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/1campus.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption">
+        <h5 class="header_image" dir="rtl">ئەزموون ل زانکوویا زاخو</h5>
+        <p class="paragraph_image" dir="rtl">ئەزموونا دووماهییا خولێ ل زانکوویا زاخو هاتە ئەنجامدان!</p>
+      </div>
+    </div>
+    <div class="carousel-item active">
+      <img src="images/2campus.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption">
+        <h5 class="header_image" dir="rtl">رێژا قوتا بییان ل ئەزمونێ</h5>
+        <p class="paragraph_image" dir="rtl">پتر ژ ٥٠ قوتابییان بەشداری ئەزمونێ بوون ل زانکوییا زاخو!</p>
+      </div>
+    </div>
+    <div class="carousel-item active">
+      <img src="images/3campus.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption">
+        <h5 class="header_image" dir="rtl">ستافێ پەیڤێن و CDCی</h5>
+        <p class="paragraph_image" dir="rtl">ئەزموون هاتە سەرپەرشتی کرن ب چاڤدێرییا ستافێ پەیڤین و CDC و هەروەسا ب ئامادەبوونا دکتور کاروان جەقسی!</p>
+      </div>
+    </div>
+    <div class="carousel-item active">
+      <img src="images/4campus.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption">
+        <h5 class="header_image" dir="rtl">خول ب گشتی</h5>
+        <p class="paragraph_image" dir="rtl">هەژی گوتنێ ییە ئەڤ خولە هەمی هاتە ب رێڤە برن و دگەل ئەزموون و باوەرنامێ بێ بەرامبەر!</p>
+      </div>
+    </div>
+
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaption" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaption" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div> 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<br>
+
+
+ <div id="carouselExampleOnline" class="carousel_slide carousel slide" data-bs-ride="false">
+  <h1 dir="rtl" class="tittle_image text-center">قوتابیێن مە لسەر بەرنامێ Zoom</h1>
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleOnline" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleOnline" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleOnline" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleOnline" data-bs-slide-to="3" aria-label="Slide 4"></button>
+  </div>
+
+  <div class="carousel-inner">
+
+    <div class="carousel-item active">
+      <img src="images/1online.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption">
+        <h5 class="header_image" dir="rtl">ئەزموون بو قوتابیێن دیر ژ زاخو</h5>
+        <p class="paragraph_image" dir="rtl">ئەو قوتابیێن نەشیایین ئامادەبن ل زانکوییا زاخو ، برێکا ئونلاین ئەزموون ئەنجامدان</p>
+      </div>
+    </div>
+
+    <div class="carousel-item active">
+      <img src="images/2online.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption">
+        <h5 class="header_image" dir="rtl">ئەزمونا ئونلاین ب چ شێوەبوو</h5>
+        <p class="paragraph_image" dir="rtl"> ئەزموون هاتە ئەنجامدان ب رێکا گوگل فورم!</p>
+      </div>
+    </div>
+
+    <div class="carousel-item active">
+      <img src="images/3online.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption">
+        <h5 class="header_image" dir="rtl">خول ب گشتی</h5>
+        <p class="paragraph_image" dir="rtl"> هەژی گوتنێ ئەف ئەزمونا ئونلاین و دگەل خولێ ژی هەمی بێ بەرامبەر بوو!</p>
+      </div>
+    </div>
+
+    <div class="carousel-item active">
+      <img src="images/4online.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption">
+        <h5 class="header_image" dir="rtl">سەرپەرشتی کرن</h5>
+        <p class="paragraph_image" dir="rtl">هەر ماموستایەکێ سەرپەرشتییا قوتابیێن خو دکر و هاریکاریا وان دکر بو پتر تێگەهشتنێ د ئەزموونێدا!</p>
+      </div>
+    </div>
+
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleOnline" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleOnline" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div> 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -467,7 +653,7 @@
 <!-- footer -->
 <div class="fluid text-center">
   <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="images/4.png" alt=""></a>
-  <div class="user-select-none text-dark">
+  <div class="copy_right user-select-none text-dark">
     Copy Right &copy; Ahmed Avdal Shereef
   </div>
 <div id="bottom" class="title_footer text-dark fw-bold mb-3">
@@ -482,6 +668,22 @@
   <div class="col p-2"><a class="nav-link" href="https://www.instagram.com/peyvin_courses?igshid=OGQ5ZDc2ODk2ZA==">Instagram: @peyvin_courses </a></div>
 </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
