--- a/vips.html
+++ b/vips.html
@@ -25,17 +25,12 @@
     <link rel="stylesheet" href="css/signup.css">
     <link rel="stylesheet" href="css/teachers.css">
     <link rel="stylesheet" href="css/dropdown.css">
-
-
-
     <style>
                   .underline_fixed_index{ 
                   display: block;
                   position: relative;
                   padding: 0.2em 0;
                   }
-
-
                   .underline_fixed_index::after{
                   content: '';
                   position: absolute;
@@ -45,7 +40,6 @@
                   height: 0.2em;
                   background-color: #e37886;
                   }
-
                   .underline_fixed_index_menu {
                   display: block;
                   position: relative;
@@ -67,8 +61,6 @@
                   opacity: 1;
                   transform: translate3d(0, 0.2em, 0);
                   }
-
-                  
                   .registration_button{
                     background-color: #e37886;
                     width: fit-content;
@@ -77,12 +69,7 @@
                     padding: 4px;
                     font-size: 15px;
                   }
-
-
-
-
     </style>
-
     </head>
 
 <body>
@@ -234,13 +221,6 @@
 </div>
 
 </div>
-
-
-
-
-
-
-
 <!-- course offers -->
 <!-- number 1 -->
 <div class="all_offers container  text-center ">
@@ -250,7 +230,7 @@
       <div class="boxes">
         <h1 class="tittle_text">فێری زمانێ ئینگلیزی ببە <span class="text-warning">بێ رێزمان</span></h1>
         <p dir="rtl" class="paragraph">د ڤێ جورێ خولێ دا ماموستا دێ پتر پاشتراستیێ ل هندێ کت کو فێرخواز باخڤت و ب هویربینی رێزمانێ شلوڤەناکت!</p>
-        <img src="https://online.fliphtml5.com/huzzz/wwtd/files/large/1.jpg" alt="" style="width:30%; margin: auto;">
+        <img src="https://m.media-amazon.com/images/W/MEDIAX_792452-T2/images/I/81yzzlxHYML._AC_UF1000,1000_QL80_.jpg" alt="" style="width:30%; margin: auto;">
         <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
       </div>
   </div>
@@ -263,7 +243,7 @@
     <div class="boxes">
       <h1 class="tittle_text">فێری زمانێ ئینگلیزی ب رێکا <span class="text-warning">ب کارئینانا رێزمانێ</span></h1>
       <p dir="rtl" class="paragraph">دڤێ خولێدا ماموستا دێ پشتراستیێ ل فێرخوازی کت کو فێری زمانێ ببت و دگەل دا رێزمانێ ژی ب هویربینی بزانت!</p>
-      <img src="https://online.fliphtml5.com/huzzz/wwtd/files/large/1.jpg" alt="" style="width:30%; margin: auto;">
+      <img src="https://www.cambridge.es/var/ezdemo_site/storage/images/media/images/covers/gram-vocab-and-pron/grammar/egu5/98330-1-esl-ES/egu5.jpg" alt="" style="width:30%; margin: auto;">
       <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
     </div>
   </div>
@@ -276,7 +256,7 @@
     <div class="boxes">
       <h1 class="tittle_text">فێربوون <span class="text-warning">برێکا پەیڤان و وێنان</span></h1>
       <p dir="rtl" class="paragraph">د ڤێ جورێ خولێدا دێ ماموستاپتر پاشتراستیێ ل پەیڤان کەت و پشتی فێرخواز ڤێ خولێ ب دووماهی بینت دێ گەنجینەکا مەزن هەبت ژ پەیڤان!</p>
-      <img src="https://online.fliphtml5.com/huzzz/wwtd/files/large/1.jpg" alt="" style="width:30%; margin: auto;">
+      <img src="https://cdn3.kobisi.com/image/3826/4784857/1/768/1366/4000-essential-english-words-1-2-3-4-5-6-cd-roms.jpg?v=1609942140" alt="" style="width:40%; margin: auto;">
       <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
     </div>
   </div>
@@ -294,32 +274,6 @@
     </div>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="all_offers container  text-center">
-  <div class="row">
-    <h1 class="numbers rounded-circle">5</h1>
-
-    <div class="boxes">
-      <h1 dir="rtl" class="tittle_text"><span class="text-warning">خولا ڤەکری تایبەت</span></h1>
-      <p dir="rtl" class="paragraph">د ڤێ جورێ  خولێدا ماموستا دێ ل دیف حەزا تە و ب بوارێ تەڤە گرێدای دێ تە فێرکەت و پەیڤ و رستان بوتە دابینکەت!</p>
-      <img src="https://online.fliphtml5.com/huzzz/wwtd/files/large/1.jpg" alt="" style="width:30%; margin: auto;">
-      <a class="registration_button nav-link mt-3" href="registration.html">بەشدار بوون</a>
-    </div>
-  </div>
-</div>
-
-
 
 
 
